# nyc-tlc-eda-2013-2017

./: .env.example  .gitignore  README.md  pyproject.toml
datasets/: DATASETS_NOTE.md
docs/Concluciones/: from_check_data_integrity.md  from_final_unification_per_services.md  from_unification_per_folder.md  from_validaction_per_folder.md  from_validation_per_services.md
docs/Documentacion_general/: DATA_DICTIONARY.md  DATA_SOURCES.md  PROCESSING_GUIDE.md  PROJECT_OVERVIEW.md  main.py
outputs/: OUTPUT_LAYOUT.md
outputs/new_datasets/: UNIFIED_DATASETS.md
outputs/new_datasets/2013/: EXPECTED_OUTPUTS.md
outputs/new_datasets/2014/: EXPECTED_OUTPUTS.md
outputs/new_datasets/2015/: EXPECTED_OUTPUTS.md
outputs/new_datasets/2016/: EXPECTED_OUTPUTS.md
outputs/new_datasets/2017/: EXPECTED_OUTPUTS.md
raw_datasets/: DATA_LAYOUT.md
raw_datasets/2013/yellow_taxi/: PLACE_PARQUET_HERE.md
raw_datasets/2014/green_taxi/: PLACE_PARQUET_HERE.md
raw_datasets/2014/yellow_taxi/: PLACE_PARQUET_HERE.md
raw_datasets/2015/for_hire_vehicle/: PLACE_PARQUET_HERE.md
raw_datasets/2015/green_taxi/: PLACE_PARQUET_HERE.md
raw_datasets/2015/yellow_taxi/: PLACE_PARQUET_HERE.md
raw_datasets/2016/for_hire_vehicle/: PLACE_PARQUET_HERE.md
raw_datasets/2016/green_taxi/: PLACE_PARQUET_HERE.md
raw_datasets/2016/yellow_taxi/: PLACE_PARQUET_HERE.md
raw_datasets/2017/for_hire_vehicle/: PLACE_PARQUET_HERE.md
scripts/: check_data_integrity.py  final_unification_per_services.py  unification_per_folder.py  validation_per_folder.py  validation_per_service.py
(+2 files in other folders)
