[project]
name = "eda-2013-to-2017"
version = "0.1.0"
description = "EDA y procesamiento de datos NYC TLC 2013-2017"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2026.3.0",
    "fastparquet>=2026.3.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "python-dotenv>=1.2.2",
    "seaborn>=0.13.2",
]
